<resources>
    <string name="app_name">Optima24</string>
    <string name="no_data">No data</string>
    <string name="submit_btn">Submit</string>
    <string name="token_hint">API token</string>
    <string name="language_hint">Language code</string>
    <string name="retry_btn">Retry</string>
    <string name="continue_" >Продолжить</string>
    <string name="start" >Начать</string>
    <string name="face_scanning">Сканирование лица</string>
    <string name="document_scanning">Сканирование паспорта</string>
    <string name="ready">Готово</string>
    <string name="cancel">Отменить</string>
    <string name="are_u_sure_exit">Вы действительно хотите выйти?</string>
    <string name="identification_is_not_finished">Идентификация не закончена. Процесс будет остановлен и вы будете перенапралены на главный экран.</string>
    <string name="exit">Выход</string>
    <string name="ENEJKG22">ENEJKG22</string>
    <string name="AP">Азия-тихоокеанский регион</string>
    <string name="AboutCard">О карте</string>
    <string name="BKS">BKS</string>
    <string name="CHINA">Китай</string>
    <string name="CNY">¥</string>
    <string name="CRYPTOGRAPHY_ERROR">На платформе мобильных платежей возникла ошибка. Пожалуйста, повторите ваш запрос позднее, или свяжитесь со службой поддержки системы</string>
    <string name="Card_lock">Блокировка карты</string>
    <string name="Cash_withdrawal">Снятие наличныx в банкоматах</string>
    <string name="select_limit_type">Выберите тип лимита</string>
    <string name="limit_type">Тип лимита</string>
    <string name="DUPLICATE_PAYMENT_APP_INSTANCE_ID">Обнаружен дубликат мобильного приложения на сервере мобильных платежей. Пожалуйста, начните процесс регистрации с начала</string>
    <string name="EUR">€</string>
    <string name="FixCount">FixCount</string>
    <string name="FixSum">FixSum</string>
    <string name="GBP">£</string>
    <string name="INTERNAL_SERVICE_FAILURE">Некорректный формат запроса. Пожалуйста, проверьте доступность обновлений приложения на Google Play Market</string>
    <string name="INVALID_ELIGIBILITY_RECEIPT">Некорректный enrollment reference. Пожалуйста, повторите процесс оцифровки карты или свяжитесь с центром поддержки пользователей</string>
    <string name="INVALID_MPA_VERSION">Запрос к платформе мобильных платежей отклонён. Возможно, ваше мобильное приложение устарело и требует обновления. Пожалуйста, проверьте доступность обновлений приложения на Google Play Market</string>
    <string name="INVALID_TASK_ID">Ошибка получения состояния данных. Пожалуйста, повторите процедуру позднее</string>
    <string name="INVALID_TERMS_AND_CONDITIONS">Некорректная ссылка на Условия договора. Повторите оцифровку позднее или свяжитесь со службой поддержки</string>
    <string name="INVALID_TOKEN_STATUS">Ваше приложение заблокировано или оцифрованная карта приостановлена. Пожалуйста, свяжитесь с банком</string>
    <string name="INVALID_TOKEN_UNIQUE_REFERENCE">Невозможно выполнить операцию с данным токеном. Пожалуйста, обновите список карт, свяжитесь с банком или провайдером услуг.</string>
    <string name="INVALID_WORKFLOW">Ошибка последовательности обработки данных. Если это сообщение возникает постоянно, пожалуйста, переустановите приложение</string>
    <string name="InterfaceLanguage">Язык интерфейса</string>
    <string name="Internet_limit_payments">Интернет платежи</string>
    <string name="Internet_payments">Интернет платежи</string>
    <string name="IsCounterService">IsCounterService</string>
    <string name="KGS">с</string>
    <string name="LIMDom">Снятие наличных в банкоматах на территории КР</string>
    <string name="LIMVAcq">Снятие наличных в банкоматах за пределами КР</string>
    <string name="LastCount">LastCount</string>
    <string name="LastCountDate">LastCountDate</string>
    <string name="Limits">Лимиты</string>
    <string name="M1000">Более 1000 метров</string>
    <string name="M500">Не далее 500 метров</string>
    <string name="Mm1000">Не далее 1000 метров</string>
    <string name="NONEMV">Индонезия, Непал, Индия, Япония</string>
    <string name="NO_ACTIVE_SESSION">Нет доступного сеанса связи с сервером</string>
    <string name="NO_CARDS_AVAILABLE">Нет доступных карт. Пожалуйста, выберите другой тип карты или свяжитесь с банком</string>
    <string name="PAN_ALREADY_DIGITIZED">Карта уже оцифрована в вашем мобильном кошельке. Пожалуйста, проверьте статус карты или свяжитесь с банком</string>
    <string name="PrevCount">PrevCount</string>
    <string name="PrevCountDate">PrevCountDate</string>
    <string name="REGISTRATION_EXPIRED">Время для регистрации на сервере мобильных платежей истекло. Пожалуйста, выполните процесс с начала</string>
    <string name="REGISTRATION_IN_PROGRESS">Запущен параллельный процесс регистрации: для устройства уже выполняется процесс регистрации на платформе мобильных платежей. Вы можете провести регистрацию позже</string>
    <string name="RESOURCE_NOT_FOUND">Сервис временно недоступен. Пожалуйста, повторите ваш запрос позднее</string>
    <string name="RNS_UNAVAILABLE">На платформе мобильных платежей возникла ошибка. Пожалуйста, повторите ваш запрос позднее, или свяжитесь со службой поддержки системы</string>
    <string name="RUB">₽</string>
    <string name="SMS_alert">СМС/Пуш уведомления</string>
    <string name="ServiceId">ServiceId</string>
    <string name="ServiceName">ServiceName</string>
    <string name="THAILAND">Таиланд</string>
    <string name="TransferConversionInsideMultiCurrencyCard">Конвертация внутри мультивалютной карты</string>
    <string name="TransferForeignCurrencyToAnotherBank">Перевод в иностранной валюте</string>
    <string name="TransferMoneyFromMasterToVisa">Перевод на карту Visa</string>
    <string name="TransferMoneyFromVisaToMaster">Перевод на карту Mastercard</string>
    <string name="TransferMoneyInsideBankFromAccountToAccount">Перевод внутри банка на счет</string>
    <string name="TransferMoneyInsideBankFromAccountToCard">Перевод внутри банка на карту</string>
    <string name="TransferMoneyInsideBankFromCardAccountToAccount">Перевод внутри банка на счет</string>
    <string name="TransferMoneyInsideBankFromCardAccountToCard">Перевод внутри банка на карту</string>
    <string name="TransferMoneyInsideClientAccountToCard">Перевод со своего счета на карт-счет</string>
    <string name="TransferMoneyInsideClientAccounts">Перевод между своими счетами</string>
    <string name="TransferMoneyInsideClientCardToAccount">Перевод со своего карт-счета на счет</string>
    <string name="TransferMoneyInsideClientCards">Перевод между своими картами</string>
    <string name="TransferMoneyInsideClientDepositToAccount">Перевод со своего депозита на счет</string>
    <string name="TransferMoneyInsideClientDepositToCard">Перевод со своего депозита на карту</string>
    <string name="TransferMoneyMasterCardToMasterCard">Перевод на карту Mastercard</string>
    <string name="TransferMoneyToAnotherBank">Межбанковский перевод</string>
    <string name="TransferMoneyToDeposit">Пополнение депозита</string>
    <string name="TransferMoneyToOutsideCard">Перевод на карту Visa</string>
    <string name="UNKNOWN_CRDPRODUCT">Неизвестный тип карты получен от систем банка. Пожалуйста, свяжитесь с банком или повторите операцию позднее</string>
    <string name="UNKNOWN_HOST">Ошибка доступа к серверу мобильных платежей. Проверьте соединение с интернет</string>
    <string name="USA">США</string>
    <string name="USD">$</string>
    <string name="VTS_COMMUNICATION_ERROR">Ошибка доступа к Visa Tokenization Service</string>
    <string name="VTS_ERROR">Ошибка работы с Visa Tokenization Service</string>
    <string name="VTS_INVALID_CARD">Ошибка доступа к данным Visa Tokenization Service. Пожалуйста, свяжитесь с банком</string>
    <string name="VTS_INVALID_PARAMETERS">Отказ в обработке запроса в Visa Tokenization Service. Пожалуйста, свяжитесь с банком и проверьте статус карты</string>
    <string name="VTS_OPERATIONS_NOT_ALLOWED">Отказ в обработке запроса в Visa Tokenization Service. Пожалуйста, свяжитесь с банком и проверьте статус карты</string>
    <string name="VTS_SERVICE_ERROR">Внутренняя ошибка в Visa Tokenization Service</string>
    <string name="VTS_TEMP_ERROR">Произошла внутренняя ошибка в Visa Tokenization Service</string>
    <string name="plus_sign">+</string>
    <string name="_7">+7</string>
    <string name="_formatted_text_monthly" formatted="false">%s в %s-го числа в %s</string>
    <string name="_formatted_text_weekly" formatted="false">%s в %s в %s</string>
    <string name="_formatted_text_yearly" formatted="false">%s %s в %s</string>
    <string name="_no">Нет</string>
    <string name="_t_choose_branch">Выберите из списка</string>
    <string name="_t_choose_service">Выберите услугу из списка</string>
    <string name="_t_choose_transfer_type">Выберите вид перевода</string>
    <string name="_t_fill_">Заполните поле</string>
    <string name="_t_fill_all_required_">Заполните все обязательные поля</string>
    <string name="_yes">Да</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authorize">Авторизироваться</string>
    <string name="cancel_request">Введите комментарий для отмены заявки</string>
    <string name="comment">Комментарий</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="current_password">Текущий пароль</string>
    <string name="disabled">Выключено</string>
    <string name="enabled">Включено</string>
    <string name="new_password">Новый пароль</string>
    <string name="note">Обратите внимание!</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Длина пароля не может быть меньше 8 и больше 15 символов. Пароль должен содержать как буквы так и цифры. Будьте внимательны при вводе. Пароль чувствителен к регистру.</string>
    <string name="password_successful_changed">Пароль успешно изменен!</string>
    <string name="priceSmsNotif">Стоимость сервиса определяется тарифами Банка в зависимости от выбранного тарифного плана SMS-уведомления подключаются на номер телефона, указанный вами при заключении Договора с Банком. Для уточнения номера телефона, обратитесь в Контакт-центр Банка по телефону 2424 Для включения или выключения услуги SMS-уведомления переведите тумблер в нужное положение на «Включено» либо «Выключено» и нажмите кнопку «Продолжить».</string>
    <string name="re_new_password">Повторите новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="smsNotif">Это простой и удобный sms-сервис, позволяющий получать информацию обо всех операциях по картам. Система автоматически проинформирует вас в виде SMS сообщения о расходной и приходной операции по вашему счету, что позволит обеспечить полный контроль всех производимых операций.</string>
    <string name="session_end">Завершение сеанса</string>
    <string name="session_end_attention_title">Внимание! Сеанс будет автоматически завершен через</string>
    <string name="Second3_timer">секунд</string>
    <string name="t_attention">"Лимит (по курсу Банка) за один календарный месяц:
Сумма одной операции на территории РК: 2500 $
 Сумма одной операции за пределами РК: 2500 $
 Количество операций в сутки на территории РК: 5
 Количество операций в сутки за пределами РК: 5
 Количество операций за 4 дня: 20
 Общая сумма операций за 4 дня: 10 000$
 Ряд стран и банков могут ограничивать владельцев своих карточек в проведении данной операции (Колумбия, США и пр.). Список таких стран устанавливается правилами платежной системы и может меняться."</string>
    <string name="t_continue">Продолжить</string>
    <string name="t_end">Завершить</string>
    <string name="t_send">Отправить</string>
    <string name="temp_password">Временный пароль</string>
    <string name="transfer_further">Далее</string>
</resources>