<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue_0_93_186"
            app:navigationIcon="@drawable/arrow_left">

            <TextView
                style="@style/TextViewTitle"
                android:text="@string/password"
                android:id="@+id/tvTitle" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_temp_password"
                android:background="@null"
                android:hint="@string/temp_password"
                android:inputType="textPassword|textAutoComplete"
                android:padding="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="#e7e7e7" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_new_password"
                android:background="@null"
                android:hint="@string/new_password"
                android:inputType="textPassword|textAutoComplete"
                android:padding="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="#e7e7e7" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_re_new_password"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:inputType="textPassword|textAutoComplete"
                android:padding="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="#e7e7e7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/password_hint" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_further"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="bottom"
                android:background="@drawable/button_default"
                android:text="@string/transfer_further"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/success_change_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:visibility="gone">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/ic_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/password_successful_changed"
            android:textColor="@color/green_19_136_52"
            android:textSize="17sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_authorize"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorize"
            android:textSize="17sp"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/blue_0_93_186"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>