<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue_0_93_186"
            app:navigationIcon="@drawable/arrow_left">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextViewTitle"
                android:text="@string/SMS_alert" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lock_card_hint_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/smsNotif"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lock_hint_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/priceSmsNotif"
                android:textColor="@color/red_attention"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEn"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:background="@color/blue_0_93_186"
                        android:text="@string/enabled"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnDis"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:background="@color/blue_0_93_186"
                        android:text="@string/disabled"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConnSms"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:background="@drawable/button_default"
                    android:text="@string/t_continue"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>