<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="35dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_end"
        android:textColor="@color/rate_header_red"
        android:textSize="20sp"
        android:paddingBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/session_end_attention_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/rate_header_red"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/rate_header_red"
                android:text="@string/Second3_timer" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvForKGSLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:textColor="@color/black"
        android:text="кийин автоматтык түрдө аяктайт"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/red_255_58_58"/>

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/rate_header_red"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:layout_gravity="end"
            android:text="@string/t_continue" />

        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:textColor="@color/rate_header_red"
            android:textStyle="bold"
            android:text="@string/t_end" />

    </FrameLayout>
</LinearLayout>


